--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "name": "CMS",
   "version": "1.0.0",
   "main": "index.js",
-  "author": "nganv",
+  "author": "nguyen nga",
   "license": "MIT"
 }
